# GD-Doom-Prototype

./: .gitignore  CMakeLists.txt  CMakePresets.json  COMPILING.md  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: cmake-release.yml  cmake.yml
cmake/: EDGEClassic.cmake  Emscripten.cmake
content/all-all/scripts/: colmap.ddf  fonts.ddf  images.ddf  language.ldf  sounds.ddf  styles.ddf
content/all-all/scripts/lua/: edge_api.lua
content/blasphemer-all/scripts/: colmap.ddf  edge_hud.lua  images.ddf  language.ldf  styles.ddf
content/chex-all/scripts/: colmap.ddf  styles.ddf
content/chex3v.wad/scripts/: games.ddf  levels.ddf  rscript.rts
content/doom-all/scripts/: anims.ddf  attacks.ddf  colmap.ddf  edge_hud.lua  fonts.ddf  images.ddf  language.ldf  lines.ddf  sectors.ddf  sounds.ddf  styles.ddf  switch.ddf  things.ddf  weapons.ddf
content/doom.wad/scripts/: games.ddf  language.ldf  levels.ddf  rscript.rts
content/doom1-all/scripts/: anims.ddf  games.ddf  language.ldf  levels.ddf  playlist.ddf  rscript.rts
content/doom2-all/scripts/: anims.ddf  attacks.ddf  games.ddf  language.ldf  levels.ddf  playlist.ddf  rscript.rts  things.ddf  weapons.ddf
content/doom2-bfg/scripts/: images.ddf  language.ldf  levels.ddf  playlist.ddf
content/hacx.wad/scripts/: colmap.ddf  fonts.ddf  styles.ddf
content/harmonyc.wad/scripts/: colmap.ddf  styles.ddf
content/heretic-all/scripts/: anims.ddf  attacks.ddf  colmap.ddf  edge_hud.lua  flats.ddf  fonts.ddf  games.ddf  images.ddf  language.ldf  levels.ddf  lines.ddf  playlist.ddf  sectors.ddf  sounds.ddf  styles.ddf  switch.ddf  things.ddf  weapons.ddf
content/heretic.wad/scripts/: games.ddf  levels.ddf
content/plutonia.wad/scripts/: language.ldf
content/rekkr-all/scripts/: anims.ddf  attacks.ddf  fonts.ddf  images.ddf  styles.ddf
content/strife-all/: games.ddf  playlist.ddf
content/tnt.wad/scripts/: anims.ddf  language.ldf
docs/licenses/: License Attribution.txt
docs/mapping/EdgeC_DB2_Config/Includes/: Edge_Classic_linedefs.cfg  Edge_Classic_sectors.cfg  Edge_Classic_things.cfg
docs/mapping/EdgeC_DBX_Config/Includes/: EdgeC_common.cfg  EdgeC_sectors.cfg  EdgeC_things.cfg
docs/mapping/EdgeC_Eureka_Config/: edge-classic.ugh
docs/mapping/EdgeC_UDB_Config/Includes/: EdgeC_common.cfg  EdgeC_linedefs.cfg  EdgeC_misc.cfg
docs/specifications/: EDGE-Classic Coding Standards.txt  EDGE-Classic Pack Structure and Usage.txt  EDGE-Classic UDMF Extensions.txt
edge_base/blasphemer/scripts/: games.ddf  sounds.ddf  styles.ddf  things.ddf
edge_base/blasphemer/scripts/lua/: edge_hud.lua
edge_base/chex1/scripts/: games.ddf  styles.ddf
edge_base/chex3v/scripts/: anims.ddf  games.ddf  images.ddf  styles.ddf  things.ddf
edge_base/chex3vm/scripts/: games.ddf  things.ddf
edge_base/freedoom1/scripts/: styles.ddf
edge_base/freedoom2/scripts/: styles.ddf
edge_base/hacx/scripts/: anims.ddf  styles.ddf  things.ddf
edge_base/harmony/scripts/: styles.ddf  things.ddf
edge_base/harmony/scripts/lua/: edge_hud.lua
edge_base/harmonyc/scripts/: weapons.ddf
edge_base/harmonyc/scripts/lua/: edge_hud.lua
edge_base/heretic/scripts/: anims.ddf  sounds.ddf  styles.ddf
edge_base/heretic/scripts/lua/: edge_hud.lua
edge_base/rekkr/scripts/: images.ddf  styles.ddf
edge_base/strife/: games.ddf
edge_base/tnt/scripts/: language.ldf
edge_defs/scripts/: attacks.ddf  colmap.ddf  flats.ddf  fonts.ddf  games.ddf  images.ddf  language.ldf  lines.ddf  movies.ddf  playlist.ddf  sectors.ddf  sounds.ddf  styles.ddf  things.ddf
edge_defs/scripts/lua/: edge_hud.lua
gd-doom/: camera_3d.gd  camera_3d.gd.uid  example.gd  example.gd.uid  example.tscn  new_standard_material_3d.tres
gd-doom-extension/: CMakeLists.txt
gd-doom-extension/source_files/: CMakeLists.txt  example_class.cpp  register_types.cpp
libraries/: CMakeLists.txt
libraries/miniaudio/: miniaudio.cc
libraries/sdl2/: sdl2-config.cmake
libraries/sokol/: CMakeLists.txt  sokol_gfx_ec.h
source_files/ddf/: CMakeLists.txt  ddf_attack.cc  ddf_colormap.cc  ddf_game.cc  ddf_game.h  ddf_image.cc  ddf_image.h  ddf_level.cc  ddf_level.h  ddf_line.cc  ddf_line.h  ddf_local.h  ddf_main.cc  ddf_playlist.cc  ddf_playlist.h  ddf_sfx.cc  ddf_sfx.h  ddf_states.cc  ddf_states.h  ddf_style.h  ddf_thing.cc  ddf_thing.h  ddf_types.h  ddf_weapon.cc
source_files/dehacked/: deh_mobj.cc  deh_mobj.h  deh_things.cc
source_files/edge/: CMakeLists.txt  am_map.cc  am_map.h  bot_think.cc  con_con.cc  con_main.cc  con_main.h  defaults.h  dm_defs.h  dm_state.h  dstrings.h  e_event.h  e_input.cc  e_input.h  e_main.cc  e_main.h  e_player.cc  e_player.h  f_finale.cc  f_interm.cc  g_game.cc  hu_draw.cc  i_ctrl.cc  i_defs_gl.h  i_main.cc  i_movie.cc  i_sound.cc  i_system.cc  i_system.h  i_video.cc  i_video.h  im_data.cc  im_data.h  m_menu.cc  m_misc.cc  m_netgame.cc  m_option.cc  m_random.cc  n_network.cc  p_action.cc  (+69 more)
source_files/edge/godot/: example_class.h  gdd_main.cc
source_files/edge/platform/: gd_platform.cc  gd_platform.h
source_files/edge/platform/godot/: example_class.cc  gd_main.cc  gd_platform_godot.cc  register_types.cc
source_files/edge/platform/null/: gd_platform_null.cc
source_files/edge/platform/sdl/: gd_platform_sdl.cc
source_files/edge/render/godot/: godot_backend.cc  godot_state.cc  godot_units.cc
source_files/edge/render/null/: null_backend.cc  null_state.cc
source_files/edge/render/sokol/: sokol_backend.cc
source_files/edge/script/compat/: lua_compat.cc  lua_core.cc  lua_hud.cc  lua_player.cc
source_files/epi/: CMakeLists.txt  epi_doomdefs.h  epi_filesystem.cc  epi_str_hash.cc
