add_subdirectory(almostequals)
add_subdirectory(miniaudio)
add_subdirectory(fluidlite)
if (EDGE_SOKOL_GL)
  add_subdirectory(sokol)
endif()
add_subdirectory(hmm)
add_subdirectory(lua)
add_subdirectory(m4p)
add_subdirectory(miniz)
add_subdirectory(pl_mpeg)
add_subdirectory(prns)
add_subdirectory(minivorbis)
add_subdirectory(stb)
add_subdirectory(thread)
if (EDGE_MIMALLOC)  
  add_subdirectory(mimalloc)
endif()
add_subdirectory(tracy)
